--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -37,137 +37,151 @@
       
       <!-- Hero section -->
       <br>
-      <div>
-        <section id="hero">
+      <section id="hero">
+        <div>
           <header>
-            <h2>We help you build your brand!</h2>
-            <p>We work with you</p>
+            <div>
+              <h2>We help you build your brand!</h2>
+              <p>We work with you</p>
+            </div>
           </header>
-          <div>
-            <!-- Add a button link after the heading -->
-            <a href="#" class="btn">Get started</a>
-          </div>
-        </section>
-      </div>
+        </div>
+        <div>
+          <!-- Add a button link after the heading -->
+          <a href="#" class="btn">Get started</a>
+        </div>
+      </section>
 
       <!-- Services section -->
       <br>
-      <div id="services">
-        <section>
+      <section id="services">
+        <div>
           <header>
-            <h2>Services</h2>
-            <p>We work with you</p>
+            <div>
+              <h2>Services</h2>
+              <p>We work with you</p>
+            </div>
           </header>
-          <div>
-            <h3><a href="#">Design & Concept</a></h3>
-            <h3><a href="#">Digital Strategy</a></h3>
-            <h3><a href="#">Content Strategy</a></h3>
-            <h3><a href="#">UX Design</a></h3>
-            <h3><a href="#">Web Development</a></h3>
-            <h3><a href="#">Social Media</a></h3>
-          </div>
-        </section>
-      </div>
+        </div>
+        <div>
+          <h3><a href="#">Design & Concept</a></h3>
+          <h3><a href="#">Digital Strategy</a></h3>
+          <h3><a href="#">Content Strategy</a></h3>
+          <h3><a href="#">UX Design</a></h3>
+          <h3><a href="#">Web Development</a></h3>
+          <h3><a href="#">Social Media</a></h3>
+        </div>
+      </section>
 
       <!-- Works section -->
       <br>
-      <div id="works">
-        <section>
+      <section id="works">
+        <div>
           <header>
-            <h2>Works</h2>
-            <p>Take a look in our portfolio</p>
+            <div>
+              <h2>Works</h2>
+              <p>Take a look in our portfolio</p>
+            </div>
           </header>
-          <div>
-            <article>
-              <h3><a href="#">Interior Design</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Web Development</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Personal Brand</a></h3>
-            </article>
-          </div>
-        </section>
-      </div>
+        </div>
+        <div>
+          <article>
+            <h3><a href="#">Interior Design</a></h3>
+          </article>
+          <article>
+            <h3><a href="#">Web Development</a></h3>
+          </article>
+          <article>
+            <h3><a href="#">Personal Brand</a></h3>
+          </article>
+        </div>
+      </section>
 
       <!-- About Us section -->
       <br>
-      <div id="about">
-        <section>
+      <section id="about">
+        <div>
           <header>
-            <h2>About Us</h2>
-            <p>Everything about us</p>
+            <div>
+              <h2>About Us</h2>
+              <p>Everything about us</p>
+            </div>
           </header>
-          <div>
-            <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          </div>
-          <!-- Add a button link after the paragraphs -->
-          <a href="about.html" class="btn">Learn more about us</a>
-        </section>
-      </div>
+        </div>
+        <div>
+          <h3>Who are we</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          <h3>Our culture</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          <h3>How we work</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+        </div>
+        <!-- Add a button link after the paragraphs -->
+        <a href="about.html" class="btn">Learn more about us</a>
+      </section>
 
       <!-- Latest news section -->
       <br>
-      <div id="latest_news">
-        <section>
+      <section id="latest_news">
+        <div>
           <header>
-            <h2>Latest news</h2>
+            <div>
+              <h2>Latest news</h2>
+            </div>
           </header>
-          <div>
-            <article>
-              <p>Career</p>
-              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-            </article>
-            <article>
-              <p>Digital Life</p>
-              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-            </article>
-            <article>
-              <p>Social</p>
-              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-            </article>
-          </div>
-        </section>
-      </div>
+        </div>
+        <div>
+          <article>
+            <p>Career</p>
+            <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          </article>
+          <article>
+            <p>Digital Life</p>
+            <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+          </article>
+          <article>
+            <p>Social</p>
+            <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+          </article>
+        </div>
+      </section>
 
       <!-- Testimonials section -->
       <br>
-      <div id="testimonials">
-        <section>
+      <section id="testimonials">
+        <div>
           <header>
-            <h2>Testimonials</h2>
-            <p>We are more than a digital company</p>
+            <div>
+              <h2>Testimonials</h2>
+              <p>We are more than a digital company</p>
+            </div>
           </header>
-          <div>
-            <!-- Testimonials content -->
-          </div>
-        </section>
-      </div>
+        </div>
+        <div>
+          <!-- Testimonials content -->
+        </div>
+      </section>
 
       <!-- Contact section -->
       <br>
-      <div id="contact">
-        <section>
+      <section id="contact">
+        <div>
           <header>
-            <h2>Contact</h2>
-            <p>We like to know new people</p>
+            <div>
+              <h2>Contact</h2>
+              <p>We like to know new people</p>
+            </div>
           </header>
-          <div>
-            <!-- Contact content -->
-          </div>
-          <!-- Add a button link after the contact content -->
-          <a href="contact.html" class="btn">Get in touch</a>
-        </section>
-      </div>
+        </div>
+        <div>
+          <!-- Contact content -->
+        </div>
+        <!-- Add a button link after the contact content -->
+        <a href="contact.html" class="btn">Get in touch</a>
+      </section>
     </main>
 
     <!-- Footer -->
