FIX : maybe here

--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -1,4 +1,3 @@
-<!-- 22-index.html -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -11,7 +10,6 @@
   </head>
   <body>
     <!-- Header -->
-    <br>
     <header>
       <div>
         <a href="/">
@@ -31,147 +29,119 @@
     </header>
     
     <!-- Main -->
-    <br>
     <main>
-      <h1>Homepage</h1>
-      
       <!-- Hero section -->
-      <br>
-      <div>
-        <section id="hero">
-          <header>
-            <h2>We help you build your brand!</h2>
-            <p>We work with you</p>
-          </header>
-          <div>
-            <!-- Add a button link after the heading -->
-            <a href="#" class="btn">Get started</a>
-          </div>
-        </section>
-      </div>
+      <section id="hero">
+        <header>
+          <h2>We help you build your brand!</h2>
+          <p>We work with you</p>
+        </header>
+        <a href="#">Get started</a>
+      </section>
 
       <!-- Services section -->
-      <br>
-      <div id="services">
-        <section>
-          <header>
-            <h2>Services</h2>
-            <p>We work with you</p>
-          </header>
-          <div>
-            <h3>Design & Concept</h3>
-            <h3>Digital Strategy</h3>
-            <h3>Content Strategy</h3>
-            <h3>UX Design</h3>
-            <h3>Web Development</h3>
-            <h3>Social Media</h3>
-          </div>
-        </section>
-      </div>
+      <section id="services">
+        <header>
+          <h2>Services</h2>
+          <p>We work with you</p>
+        </header>
+        <div>
+          <h3>Design & Concept</h3>
+          <h3>Digital Strategy</h3>
+          <h3>Content Strategy</h3>
+          <h3>UX Design</h3>
+          <h3>Web Development</h3>
+          <h3>Social Media</h3>
+        </div>
+      </section>
 
       <!-- Works section -->
-      <br>
-      <div id="works">
-        <section>
-          <header>
-            <h2>Works</h2>
-            <p>Take a look in our portfolio</p>
-          </header>
-          <div>
-            <article>
-              <h3>Interior Design</h3>
-            </article>
-            <article>
-              <h3>Web Development</h3>
-            </article>
-            <article>
-              <h3>Personal Brand</h3>
-            </article>
-          </div>
-        </section>
-      </div>
+      <section id="works">
+        <header>
+          <h2>Works</h2>
+          <p>Take a look in our portfolio</p>
+        </header>
+        <div>
+          <article>
+            <h3>Interior Design</h3>
+          </article>
+          <article>
+            <h3>Web Development</h3>
+          </article>
+          <article>
+            <h3>Personal Brand</h3>
+          </article>
+        </div>
+      </section>
 
       <!-- About Us section -->
-      <br>
-      <div id="about">
-        <section>
-          <header>
-            <h2>About Us</h2>
-            <p>Everything about us</p>
-          </header>
-          <div>
-            <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          </div>
-          <!-- Add a button link after the paragraphs -->
-          <a href="about.html" class="btn">Learn more about us</a>
-        </section>
-      </div>
+      <section id="about">
+        <header>
+          <h2>About Us</h2>
+          <p>Everything about us</p>
+        </header>
+        <div>
+          <h3>Who are we</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          <h3>Our culture</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          <h3>How we work</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+        </div>
+        <a href="about.html">Learn more about us</a>
+      </section>
 
       <!-- Latest news section -->
-      <br>
-      <div id="latest_news">
-        <section>
-          <header>
-            <h2>Latest news</h2>
-          </header>
-          <div>
-            <article>
-              <p>Career</p>
-              <h3>Hoc loco tenere se Triarius non potuit.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-            </article>
-            <article>
-              <p>Digital Life</p>
-              <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-            </article>
-            <article>
-              <p>Social</p>
-              <h3>Bestiarum vero nullum iudicium puto.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-            </article>
-          </div>
-        </section>
-      </div>
+      <section id="latest_news">
+        <header>
+          <h2>Latest news</h2>
+        </header>
+        <div>
+          <article>
+            <p>Career</p>
+            <h3>Hoc loco tenere se Triarius non potuit.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          </article>
+          <article>
+            <p>Digital Life</p>
+            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+          </article>
+          <article>
+            <p>Social</p>
+            <h3>Bestiarum vero nullum iudicium puto.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+          </article>
+        </div>
+      </section>
 
       <!-- Testimonials section -->
-      <br>
-      <div id="testimonials">
-        <section>
-          <header>
-            <h2>Testimonials</h2>
-            <p>We are more than a digital company</p>
-          </header>
-          <div>
-            <!-- Testimonials content -->
-          </div>
-        </section>
-      </div>
+      <section id="testimonials">
+        <header>
+          <h2>Testimonials</h2>
+          <p>We are more than a digital company</p>
+        </header>
+        <div>
+          <article>Testimonial 1</article>
+          <article>Testimonial 2</article>
+          <article>Testimonial 3</article>
+        </div>
+      </section>
 
       <!-- Contact section -->
-      <br>
-      <div id="contact">
-        <section>
-          <header>
-            <h2>Contact</h2>
-            <p>We like to know new people</p>
-          </header>
-          <div>
-            <!-- Contact content -->
-          </div>
-          <!-- Add a button link after the contact content -->
-          <a href="contact.html" class="btn">Get in touch</a>
-        </section>
-      </div>
+      <section id="contact">
+        <header>
+          <h2>Contact</h2>
+          <p>We like to know new people</p>
+        </header>
+        <div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+        </div>
+        <a href="contact.html">Get in touch</a>
+      </section>
     </main>
 
     <!-- Footer -->
-    <br>
     <footer>
       <div>
         <!-- Social Media Links -->
