--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -16,7 +16,7 @@
         <a href="/">
           <span>Techium</span>
         </a>
-      </div>
+      
       <nav>
         <!-- Navigation Links -->
         <a href="/">Home</a>
@@ -27,6 +27,7 @@
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
       </nav>
+    </div>
     </header>
     
     <!-- Main -->
@@ -37,7 +38,7 @@
       <!-- Hero section -->
       <br>
       <section id="hero">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>We help you build your brand!</h2>
@@ -48,13 +49,13 @@
         <div>
           <!-- Add a button link after the heading -->
           <a href="#" class="btn">Get started</a>
-        </div>
+        </div></div>
       </section>
 
       <!-- Services section -->
       <br>
       <section id="services">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>Services</h2>
@@ -69,13 +70,13 @@
           <h3><a href="#">UX Design</a></h3>
           <h3><a href="#">Web Development</a></h3>
           <h3><a href="#">Social Media</a></h3>
-        </div>
+        </div></div>
       </section>
 
       <!-- Works section -->
       <br>
       <section id="works">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>Works</h2>
@@ -93,13 +94,13 @@
           <article>
             <h3><a href="#">Personal Brand</a></h3>
           </article>
-        </div>
+        </div></div>
       </section>
 
       <!-- About Us section -->
       <br>
       <section id="about">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>About Us</h2>
@@ -116,13 +117,13 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </div>
         <!-- Add a button link after the paragraphs -->
-        <a href="about.html" class="btn">Learn more about us</a>
+        <a href="about.html" class="btn">Learn more about us</a></div>
       </section>
 
       <!-- Latest news section -->
       <br>
       <section id="latest_news">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>Latest news</h2>
@@ -145,13 +146,13 @@
             <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
           </article>
-        </div>
+        </div></div>
       </section>
 
       <!-- Testimonials section -->
       <br>
       <section id="testimonials">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>Testimonials</h2>
@@ -161,13 +162,13 @@
         </div>
         <div>
           <!-- Testimonials content -->
-        </div>
+        </div></div>
       </section>
 
       <!-- Contact section -->
       <br>
       <section id="contact">
-        <div>
+        <div><div>
           <header>
             <div>
               <h2>Contact</h2>
@@ -180,7 +181,7 @@
         </div>
         <!-- Add a button link after the contact content -->
         <a href="contact.html" class="btn">Get in touch</a>
-      </section>
+      </div></section>
     </main>
 
     <!-- Footer -->
