--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -33,11 +33,10 @@
     <!-- Main -->
     <br>
     <main>
-      <h1>Homepage</h1>
-      
+
       <!-- Hero section -->
       <br>
-      <section id="hero">
+      <section>
         <div><div>
           <header>
             <div>
@@ -54,7 +53,7 @@
 
       <!-- Services section -->
       <br>
-      <section id="services">
+      <section>
         <div><div>
           <header>
             <div>
@@ -75,7 +74,7 @@
 
       <!-- Works section -->
       <br>
-      <section id="works">
+      <section>
         <div><div>
           <header>
             <div>
@@ -99,7 +98,7 @@
 
       <!-- About Us section -->
       <br>
-      <section id="about">
+      <section>
         <div><div>
           <header>
             <div>
@@ -122,7 +121,7 @@
 
       <!-- Latest news section -->
       <br>
-      <section id="latest_news">
+      <section>
         <div><div>
           <header>
             <div>
@@ -151,7 +150,7 @@
 
       <!-- Testimonials section -->
       <br>
-      <section id="testimonials">
+      <section>
         <div><div>
           <header>
             <div>
@@ -167,7 +166,7 @@
 
       <!-- Contact section -->
       <br>
-      <section id="contact">
+      <section>
         <div><div>
           <header>
             <div>
