FIX : FIXED ALL

--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -1,188 +1,187 @@
-<!-- 24-index.html -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Homepage - Techium</title>
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
-  </head>
-  <body>
+</head>
+<body>
     <!-- Header -->
     <br>
     <header>
-      <div>
-        <a href="/">
-          <span>Techium</span>
-        </a>
-      </div>
-      <nav>
-        <!-- Navigation links as an unordered list -->
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#works">Works</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#latest_news">Latest news</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+        <div>
+            <a href="/">
+                <div>
+                    <span>Techium</span>
+                </div>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
+
     <!-- Main -->
     <br>
     <main>
-      <h1>Homepage</h1>
-      
-      <!-- Hero section -->
-      <br>
-      <div>
-        <section id="hero">
-          <header>
-            <h2>We help you build your brand!</h2>
-            <p>We work with you</p>
-          </header>
-          <div>
-            <!-- Add a button link after the heading -->
-            <a href="#" class="btn">Get started</a>
-          </div>
-        </section>
-      </div>
-
-      <!-- Services section -->
-      <br>
-      <div id="services">
+        <!-- Hero section -->
+        <br>
         <section>
-          <header>
-            <h2>Services</h2>
-            <p>We work with you</p>
-          </header>
-          <div>
-            <h3><a href="#">Design & Concept</a></h3>
-            <h3><a href="#">Digital Strategy</a></h3>
-            <h3><a href="#">Content Strategy</a></h3>
-            <h3><a href="#">UX Design</a></h3>
-            <h3><a href="#">Web Development</a></h3>
-            <h3><a href="#">Social Media</a></h3>
-          </div>
+            <div>
+                <header>
+                    <h2>We help you build your brand!</h2>
+                </header>
+                <div>
+                    <a href="#">Get started</a>
+                </div>
+            </div>
         </section>
-      </div>
 
-      <!-- Works section -->
-      <br>
-      <div id="works">
-        <section>
-          <header>
-            <h2>Works</h2>
-            <p>Take a look in our portfolio</p>
-          </header>
-          <div>
-            <article>
-              <h3><a href="#">Interior Design</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Web Development</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Personal Brand</a></h3>
-            </article>
-          </div>
+        <!-- Services section -->
+        <br>
+        <section id="services">
+            <div>
+                <header>
+                    <h2>Services</h2>
+                    <p>We work with you</p>
+                </header>
+                <div>
+                    <h3><a href="#">Design & Concept</a></h3>
+                    <h3><a href="#">Digital Strategy</a></h3>
+                    <h3><a href="#">Content Strategy</a></h3>
+                    <h3><a href="#">UX Design</a></h3>
+                    <h3><a href="#">Web Development</a></h3>
+                    <h3><a href="#">Social Media</a></h3>
+                </div>
+            </div>
         </section>
-      </div>
 
-      <!-- About Us section -->
-      <br>
-      <div id="about">
-        <section>
-          <header>
-            <h2>About Us</h2>
-            <p>Everything about us</p>
-          </header>
-          <div>
-            <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          </div>
-          <!-- Add a button link after the paragraphs -->
-          <a href="about.html" class="btn">Learn more about us</a>
+        <!-- Works section -->
+        <br>
+        <section id="works">
+            <div>
+                <header>
+                    <h2>Works</h2>
+                    <p>Take a look in our portfolio</p>
+                </header>
+                <div>
+                    <article>
+                        <h3><a href="#">Interior Design</a></h3>
+                    </article>
+                    <article>
+                        <h3><a href="#">Web Development</a></h3>
+                    </article>
+                    <article>
+                        <h3><a href="#">Personal Brand</a></h3>
+                    </article>
+                </div>
+            </div>
         </section>
-      </div>
 
-      <!-- Latest news section -->
-      <br>
-      <div id="latest_news">
-        <section>
-          <header>
-            <h2>Latest news</h2>
-          </header>
-          <div>
-            <article>
-              <p>Career</p>
-              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-            </article>
-            <article>
-              <p>Digital Life</p>
-              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-            </article>
-            <article>
-              <p>Social</p>
-              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-            </article>
-          </div>
+        <!-- About Us section -->
+        <br>
+        <section id="about">
+            <div>
+                <header>
+                    <h2>About Us</h2>
+                    <p>Everything about us</p>
+                </header>
+                <div>
+                    <h3>Who are we</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>Our culture</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>How we work</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                </div>
+                <div>
+                    <a href="about.html">Learn more about us</a>
+                </div>
+            </div>
         </section>
-      </div>
 
-      <!-- Testimonials section -->
-      <br>
-      <div id="testimonials">
-        <section>
-          <header>
-            <h2>Testimonials</h2>
-            <p>We are more than a digital company</p>
-          </header>
-          <div>
-            <!-- Testimonials content -->
-          </div>
+        <!-- Latest news section -->
+        <br>
+        <section id="latest_news">
+            <div>
+                <header>
+                    <h2>Latest news</h2>
+                </header>
+                <div>
+                    <article>
+                        <p>Career</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                    </article>
+                    <article>
+                        <p>Digital Life</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                    </article>
+                    <article>
+                        <p>Social</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                    </article>
+                </div>
+            </div>
         </section>
-      </div>
 
-      <!-- Contact section -->
-      <br>
-      <div id="contact">
-        <section>
-          <header>
-            <h2>Contact</h2>
-            <p>We like to know new people</p>
-          </header>
-          <div>
-            <!-- Contact content -->
-          </div>
-          <!-- Add a button link after the contact content -->
-          <a href="contact.html" class="btn">Get in touch</a>
+        <!-- Testimonials section -->
+        <br>
+        <section id="testimonials">
+            <div>
+                <header>
+                    <h2>Testimonials</h2>
+                    <p>We are more than a digital company</p>
+                </header>
+                <div>
+                    <article>Testimonial 1</article>
+                    <article>Testimonial 2</article>
+                    <article>Testimonial 3</article>
+                </div>
+            </div>
         </section>
-      </div>
+
+        <!-- Contact section -->
+        <br>
+        <section id="contact">
+            <div>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
+                <div>
+                    <a href="contact.html">Get in touch</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
     <br>
     <footer>
-      <div>
-        <!-- Social Media Links as an unordered list -->
-        <ul>
-          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-        </ul>
-      </div>
+        <div>
+            <ul>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            </ul>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
