--- a/html_advanced/27-index.html
+++ b/html_advanced/27-index.html
@@ -1,154 +1,198 @@
-<!-- 27-index.html -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Homepage - Techium</title>
-    <meta name="description" content="Homepage for Techium website">
+    <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
-  </head>
-  <body>
+</head>
+<body>
     <!-- Header -->
     <br>
     <header>
-      <div>
-        <a href="/">
-          <span>Techium</span>
-        </a>
-      </div>
+        <div>
+            <a href="/">
+                <div>
+                    <span>Techium</span>
+                </div>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
+
     <!-- Main -->
     <br>
     <main>
-      <h1>Homepage</h1>
+        <!-- Hero section -->
+        <br>
+        <section>
+            <div>
+                <header>
+                    <h2>We help you build your brand!</h2>
+                </header>
+                <div>
+                    <a href="#">Get started</a>
+                </div>
+            </div>
+        </section>
 
-      <!-- Hero section -->
-      <br>
-      <section>
-        <header>
-          <h2>Hero section</h2>
-        </header>
-        <div>
-          <h3>We help you build your brand!</h3>
-        </div>
-      </section>
+        <!-- Services section -->
+        <br>
+        <section id="services">
+            <div>
+                <header>
+                    <h2>Services</h2>
+                    <p>We work with you</p>
+                </header>
+                <div>
+                    <h3><a href="#">Design & Concept</a></h3>
+                    <h3><a href="#">Digital Strategy</a></h3>
+                    <h3><a href="#">Content Strategy</a></h3>
+                    <h3><a href="#">UX Design</a></h3>
+                    <h3><a href="#">Web Development</a></h3>
+                    <h3><a href="#">Social Media</a></h3>
+                </div>
+            </div>
+        </section>
 
-      <!-- Services section -->
-      <br>
-      <section>
-        <header>
-          <h2>Services section</h2>
-        </header>
-        <div>
-          <h3>Design & Concept</h3>
-          <p>We work with you to create unique designs.</p>
-          <h3>Digital Strategy</h3>
-          <p>We help you strategize your digital marketing.</p>
-          <h3>Content Strategy</h3>
-          <p>We optimize your content to engage your audience.</p>
-          <h3>UX Design</h3>
-          <p>We design seamless user experiences.</p>
-          <h3>Web Development</h3>
-          <p>We build fast and responsive websites.</p>
-          <h3>Social Media</h3>
-          <p>We manage and grow your social media presence.</p>
-        </div>
-      </section>
+        <!-- Works section -->
+        <br>
+        <section id="works">
+            <div>
+                <header>
+                    <h2>Works</h2>
+                    <p>Take a look in our portfolio</p>
+                </header>
+                <div>
+                    <article>
+                        <h3><a href="#">Interior Design</a></h3>
+                    </article>
+                    <article>
+                        <h3><a href="#">Web Development</a></h3>
+                    </article>
+                    <article>
+                        <h3><a href="#">Personal Brand</a></h3>
+                    </article>
+                </div>
+            </div>
+        </section>
 
-      <!-- Works section -->
-      <br>
-      <section>
-        <header>
-          <h2>Works section</h2>
-        </header>
-        <div>
-          <h3>Interior Design</h3>
-          <p>We design inspiring spaces for your needs.</p>
-          <h3>Web Development</h3>
-          <p>Our web development team builds modern websites.</p>
-          <h3>Personal Brand</h3>
-          <p>We help you build your personal brand online.</p>
-        </div>
-      </section>
+        <!-- About Us section -->
+        <br>
+        <section id="about">
+            <div>
+                <header>
+                    <h2>About Us</h2>
+                    <p>Everything about us</p>
+                </header>
+                <div>
+                    <h3>Who are we</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>Our culture</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>How we work</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                </div>
+                <div>
+                    <a href="about.html">Learn more about us</a>
+                </div>
+            </div>
+        </section>
 
-      <!-- About Us section -->
-      <br>
-      <section>
-        <header>
-          <h2>About Us section</h2>
-        </header>
-        <div>
-          <h3>Who are we</h3>
-          <p>We are a passionate team of digital experts.</p>
-          <h3>Our culture</h3>
-          <p>We value creativity, collaboration, and innovation.</p>
-          <h3>How we work</h3>
-          <p>We work closely with you to understand your needs and deliver the best results.</p>
-        </div>
-      </section>
+        <!-- Latest news section -->
+        <br>
+        <section id="latest_news">
+            <div>
+                <header>
+                    <h2>Latest news</h2>
+                </header>
+                <div>
+                    <article>
+                        <p>Career</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                    </article>
+                    <article>
+                        <p>Digital Life</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                    </article>
+                    <article>
+                        <p>Social</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                    </article>
+                </div>
+            </div>
+        </section>
 
-      <!-- Latest news section -->
-      <br>
-      <section>
-        <header>
-          <h2>Latest news section</h2>
-        </header>
-        <div>
-          <h3>Hoc loco tenere se Triarius non potuit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <h3>Bestiarum vero nullum iudicium puto.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </section>
+        <!-- Testimonials section -->
+        <br>
+        <section id="testimonials">
+            <div>
+                <header>
+                    <h2>Testimonials</h2>
+                    <p>We are more than a digital company</p>
+                </header>
+                <div>
+                    <article>Testimonial 1</article>
+                    <article>Testimonial 2</article>
+                    <article>Testimonial 3</article>
+                </div>
+            </div>
+        </section>
 
-      <!-- Testimonials section -->
-      <br>
-      <section>
-        <header>
-          <h2>Testimonials section</h2>
-        </header>
-        <div>
-          <h3>Client Testimonial #1</h3>
-          <p>"Techium helped us grow our business online!"</p>
-          <h3>Client Testimonial #2</h3>
-          <p>"Their team is very professional and creative."</p>
-          <h3>Client Testimonial #3</h3>
-          <p>"We saw an immediate improvement in our digital presence."</p>
-        </div>
-      </section>
-
-      <!-- Contact section -->
-      <br>
-      <section>
-        <header>
-          <h2>Contact section</h2>
-        </header>
-        <div>
-          <h3>Get in touch</h3>
-          <p>If you have any questions, feel free to reach out to us!</p>
-        </div>
-      </section>
+        <!-- Contact section -->
+        <br>
+        <section id="contact">
+            <div>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
+                <div>
+                    <a href="contact.html">Get in touch</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
     <br>
     <footer>
-      <div>
-        <ul>
-          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-        </ul>
-      </div>
-      <hr>
-      <div>
+        <div>
+            <ul>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            </ul>
+        </div>
+
+        <hr>
+
+        <div>
+            <ul>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+            </ul>
+        </div>
         <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
-      </div>
     </footer>
-  </body>
+</body>
 </html>
